Fix docker repository url

--- a/nodepool/elements/virt-customize/debian-9-cloud.yaml
+++ b/nodepool/elements/virt-customize/debian-9-cloud.yaml
@@ -109,7 +109,7 @@
         - name: Setup docker
           copy:
             content: |
-              deb [arch=amd64] http://download.docker.com/linux/debian stretch stable
+              deb [arch=amd64] https://download.docker.com/linux/debian stretch stable
             dest: "{{ image_tmp_dir }}/docker.list"
 
         - name: Download docker gpg key
