--- a/resources/resources.yaml
+++ b/resources/resources.yaml
@@ -366,3 +366,5 @@ resources:
             zuul/exclude-unprotected-branches: true
         - wazo-platform/wazo-router-logd:
             zuul/exclude-unprotected-branches: true
+        - wazo-platform/ansible-role-base:
+            zuul/exclude-unprotected-branches: true
