--- a/resources/resources.yaml
+++ b/resources/resources.yaml
@@ -368,3 +368,5 @@ resources:
             zuul/exclude-unprotected-branches: true
         - wazo-platform/ansible-role-base:
             zuul/exclude-unprotected-branches: true
+        - wazo-platform/ansible-playbook-bastion:
+            zuul/exclude-unprotected-branches: true
