--- a/resources/resources.yaml
+++ b/resources/resources.yaml
@@ -102,6 +102,14 @@ resources:
             zuul/exclude-unprotected-branches: true
         - wazo-platform/wazo-auth-keys:
             zuul/exclude-unprotected-branches: true
+        - wazo-platform/wazo-c4:
+            zuul/exclude-unprotected-branches: true
+        - wazo-platform/wazo-c4-carrier:
+            zuul/exclude-unprotected-branches: true
+        - wazo-platform/wazo-c4-router:
+            zuul/exclude-unprotected-branches: true
+        - wazo-platform/wazo-c4-sbc:
+            zuul/exclude-unprotected-branches: true
         - wazo-platform/wazo-call-logd:
             zuul/exclude-unprotected-branches: true
         - wazo-platform/wazo-call-logd-client:
@@ -311,12 +319,6 @@ resources:
         - wazo-platform/xivo-ci:
             zuul/exclude-unprotected-branches: true
         - wazo-platform/xivo-config:
-            zuul/exclude-unprotected-branches: true
-        - wazo-platform/xivo-consul-cli-packaging:
-            zuul/exclude-unprotected-branches: true
-        - wazo-platform/xivo-consul-replicate-packaging:
-            zuul/exclude-unprotected-branches: true
-        - wazo-platform/xivo-consul-template-packaging:
             zuul/exclude-unprotected-branches: true
         - wazo-platform/xivo-dao:
             zuul/exclude-unprotected-branches: true
