--- a/zuul.d/local_pipelines.yaml
+++ b/zuul.d/local_pipelines.yaml
@@ -47,6 +47,7 @@
         status: 'success'
         merge: true
         comment: true
+        review: 'approve'
       sqlreporter:
     failure:
       github.com:
