auto-merge pipeline: add missing review body
Why:

* Github complains about a "nil" body

--- a/zuul.d/local_pipelines.yaml
+++ b/zuul.d/local_pipelines.yaml
@@ -48,6 +48,7 @@
         merge: true
         comment: true
         review: 'approve'
+        review-body: ''
       sqlreporter:
     failure:
       github.com:
