--- a/resources/resources.yaml
+++ b/resources/resources.yaml
@@ -258,6 +258,8 @@ resources:
             zuul/exclude-unprotected-branches: true
         - wazo-platform/wazo-python-jaraco.functools-packaging:
             zuul/exclude-unprotected-branches: true
+        - wazo-platform/wazo-python-kombu-packaging:
+            zuul/exclude-unprotected-branches: true
         - wazo-platform/wazo-python-multipart-packaging:
             zuul/exclude-unprotected-branches: true
         - wazo-platform/wazo-python-portend-packaging:
