wazo-sysconfd-client: enable branch protection

--- a/resources/resources.yaml
+++ b/resources/resources.yaml
@@ -325,7 +325,7 @@ resources:
         - wazo-platform/wazo-stat:
             zuul/exclude-unprotected-branches: true
         - wazo-platform/wazo-sysconfd-client:
-            zuul/exclude-unprotected-branches: false
+            zuul/exclude-unprotected-branches: true
         - wazo-platform/wazo-terraform:
             zuul/exclude-unprotected-branches: true
         - wazo-platform/wazo-tester:
