Revert "Automatic update of defaults"
This reverts commit 627751f4a2b17de91ac6e6ed060c755e6bf7edfd.

--- a/resources/_internal.yaml
+++ b/resources/_internal.yaml
@@ -11,7 +11,7 @@ resources:
     github.com:
       base-url: "https://github.com"
       type: github
-      github-app-name: wazo-production-zuul
+      github-app-name: wazo-zuul
       github-label: mergeit
     local-git:
       base-url: "file:///var/lib/software-factory/git"
