--- a/zuul.d/local_pipelines.yaml
+++ b/zuul.d/local_pipelines.yaml
@@ -16,7 +16,7 @@
       github.com:
         # Require label
         label: auto-merge
-        status: "wazo-zuul\\[bot\\]:local/check:success"
+        status: "wazo-production-zuul\\[bot\\]:local/check:success"
         open: True
         current-patchset: True
     trigger:
@@ -32,7 +32,7 @@
           state: request_changes
         - event: pull_request
           action: status
-          status: "wazo-zuul\\[bot\\]:local/check:success"
+          status: "wazo-production-zuul\\[bot\\]:local/check:success"
         - event: pull_request
           action: labeled
           label:
